Correcting bullet point placement
They were placed too high for the currently styled bullets.

--- a/css/_post-content.scss
+++ b/css/_post-content.scss
@@ -94,7 +94,7 @@ ul {
 			left: -2px;
 			position: absolute;
 			height: .7rem;
-			margin: .4rem 0 0;
+			margin: .6rem 0 0;
 			width: .7rem;
 		}
 	}
